--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,4 @@
-Header {
-    width: 100vw;
-}
-
-.headerUList {
+.footerUList {
     list-style-type: none;
     display: flex;
     justify-content: space-around;
