initial install and some basic setup to begin testing

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,12 @@
 Header {
     width: 100vw;
+    padding: 2vw;
 }
 
-.headerUList {
+.nav {
     list-style-type: none;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
+    width: 100%;
 }
